# catkin_workspace_SOFAR_semantic_slam

./: .gitignore  .gitmodules  AndroidCamera.apk  Module4  README.md  android_tutorial_camera-release.apk  calibrate.sh  eli2.py  frames.gv  launch.sh  todo.txt
devel/: .catkin  .rosinstall  setup.sh
devel/include/cob_3d_mapping_msgs/: CurvedPolygon.h  CurvedPolygonArray.h  Feature.h  FilterObject.h  GetApproachPoseForPolygon.h  GetApproachPoseForPolygonRequest.h  GetApproachPoseForPolygonResponse.h  GetBoundingBoxes.h  GetBoundingBoxesRequest.h  GetBoundingBoxesResponse.h  GetGeometryMap.h  GetGeometryMapRequest.h  GetGeometryMapResponse.h  GetObjectsOfClass.h  GetObjectsOfClassRequest.h  GetObjectsOfClassResponse.h  Plane.h  (+55 more)
launch/: cob_people_object_detection_tensorflow.launch  cob_people_object_detection_tensorflow_params.yaml  miro.launch
src/: cob_people_object_detection_tensorflow.py  ir_adapter.py  readme.txt
src/Module1/: CMakeLists.txt  readme.md
src/SLAM/: CMakeLists.txt
src/cob_people_object_detection_tensorflow/: detector.py
src/ip_camera/: ip_camera.launch
src/module3/: CMakeLists.txt  package.xml
src/orb_slam_2_ros/: CMakeLists.txt
src/semantical_slam/: CMakeLists.txt  package.xml
src/semantical_slam/launch/: semantical_slam.launch  tf_listener.launch
src/semantical_slam/msg/: SemanticalPoint.msg
src/semantical_slam/src/: READ_ME.txt  bt_adapter.py  controller.py  ir_adapter.py  pose_adapter.py  semantical_assembler_server.py  semantical_map_generator.py  tester.py  tf_to_pose_adapter.py
src/semantical_slam/srv/: CreateSemMsg.srv
(+815 files in other folders)
